# rbvfit

./: .coveragerc  .gitignore  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  examples-gallery.md  fitting-methods.md  help_gui.md  images  index.rst  interactive-mode-guide.md  quick-start-guide.md  tutorials.md  user-guide.md
src/rbvfit/: COG Example.ipynb  Set_up_MCMC_problem.ipynb  Set_up_MCMC_problem_RB.ipynb  compute_cog.py  example_Voigt_profile_fitting.ipynb  example_Voigt_profile_fitting_interactive.ipynb  example_Voigt_profile_fitting_two_instruments.ipynb  example_voigt.ipynb  guess_profile_parameters_interactive.py  model.py  rb_interactive_vpfit.py  rb_setline.py  rb_vfit.py  skeleton.py  test.ipynb  vfit_mcmc.py  vfit_mcmc.py.bak  vfit_mcmc.py.bak.py
src/rbvfit/.ipynb_checkpoints/: Set_up_MCMC_problem_ptorrey-checkpoint.ipynb  example_Voigt_profile_fitting_interactive-checkpoint.ipynb  example_Voigt_profile_fitting_two_instruments-checkpoint.ipynb  model-checkpoint.py  test-checkpoint.ipynb
src/rbvfit/core/: fit_configuration.py  fit_results.py  fit_results.py.bak  fit_results_plot.py  parameter_manager.py  quick_fit_interface.py  results_plot.py  unified_results.py  voigt_approx.py  voigt_fitter.py  voigt_fitter.py.bak  voigt_model.new.py.bak  voigt_model.py  voigt_model.py.bak
src/rbvfit/examples/: J1030_9089_FIRE_OI1302.json  J1030_9089_HIRES_OI_air2vac_updated.json  J1030_9089_XShooter_OI1302.json  J1148_18887_HIRES_OI1302.json  J159_7921_FIRE_OI1302.json  J159_7921_XShooter_OI1302.json  bottleneck_test.py  bottoleneck_analysis.py  cog-tutorial.py  cos_data.npz  example_configuration.py  example_fitresults.py  example_merge_transition.py  example_model_structure.py  example_parameter_manager.py  example_voigt_fitter.py  example_voigt_model.py  mcmc_performance_results_20250711_143101.json  mcmc_performance_results_20250711_151702.json  my_fit.h5  performance_comparison.py  performance_comparison_curvefit.py  rbvfit2-multi-instrument-tutorial.py  rbvfit2-multi-instrument-tutorial2.py  rbvfit2-single-instrument-interactive-tutorial.py  rbvfit2-single-instrument-tutorial.py  reproduced_analysis.h5  results_examples.py  test.rbv  test_gui.rbv  test_gui_multi.rbv  test_performance_pool.py  test_script.py  test_v2_v1_bottoleneck.py
src/rbvfit/gui/: config_data_tab.py  debug_io_test.py  fitting_tab.py  interactive_param_dialog.py  io.py  main_window.py  model_setup_tab.py  model_setup_tab.py.bak  multi_instrument_parameter_manager.py  plotting_gui.py  rbvfit_gui.py  results_tab.py  shared_plot_range_dialog.py
src/rbvfit/gui/dialogs/: add_system_dialog.py
src/rbvfit/tests/: model_profiler.py  test.h5  test_fit_configuration.py  test_multi_instrument.py  test_results.py  test_vfit_mcmc_multi.py  vfit_mcmc_profiler.py  voigt_profile_results.txt  voigt_profiler.py
tests/: conftest.py  test_skeleton.py
