# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = rbvfit
description = Bayesian Voigt profile fitting for absorption line spectra with multi-system support
author = Rongmon Bordoloi
license = MIT
url = https://github.com/rongmon/rbvfit
long-description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Core dependencies
install_requires = 
    numpy
    scipy
    matplotlib
    emcee
    corner
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Optional dependencies
optional = 
    ipywidgets
    linetools
    zeus-mcmc
    h5py

[options.entry_points]
console_scripts =
    rbvfit-info = rbvfit.utils:print_info

[tool:pytest]
addopts = --verbose
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs

[pyscaffold]
version = 3.1
package = rbvfit